[Fixes #27180683] Layout issue on Admin Center sidebar page
- update CSS to allow Admin Center to stretch in Chrome

--- a/app/stylesheets/new_main.sass
+++ b/app/stylesheets/new_main.sass
@@ -393,7 +393,7 @@ a
       behavior: url(/javascripts/iepngfix.htc)
 
 .outer-container
-  width: 97%
+  width: 98%
   margin: 0 auto
 
 .inner-container
@@ -406,10 +406,10 @@ a
 
 /*** content ***/
 .content
-  border 1px solid red
   margin: 0 0 0 200px
   padding: 10px 0 0 10px
   .container
+    margin: 0
     min-width: 790px
 
   /*** Add Bing page customization ***/
@@ -444,7 +444,7 @@ a
 
 * html
   .outer-container
-    margin: 0
+    margin: 0 0 0 10px
     width: 1080px
   .content .container
     width: 790px
@@ -646,8 +646,6 @@ table.generic-table
     word-wrap: break-word
 
 .site-specific
-  float: left
-  overflow: hidden
   p
     margin: 0 0 8px
     font-size: 14px
@@ -670,7 +668,6 @@ table.generic-table
     padding: 3px 5px
     width: 640px
   .site-info
-    float: left
     .sliding_content
       width: 90%
     .sliding_trigger, .sliding_content
